date overlap issue

--- a/src/components/bottom/Bottom.css
+++ b/src/components/bottom/Bottom.css
@@ -39,5 +39,12 @@
     margin-right: 0;
 }
 @media screen and (max-width:620px) {
+    .filter{
+        display: block;
+    }
     
+    .filterDate{
+        display: block;
+        margin-top: 15px;
+    }
 }
